--- a/ROOT/pages/contacto.html
+++ b/ROOT/pages/contacto.html
@@ -27,8 +27,10 @@
     <main>
         <h1 class="tituloPag">Estamos para leerte!</h1>
         <section class="flex3">
-            <img class="imgform" src="../media/cookies.jpg" alt="cookies">
+            <div class="flexImg">
+                <img class="imgform" src="../media/cookies.jpg" alt="cookies">
             <img class="imgform" src="../media/eclairs frutilla.jpg" alt="eclairs">
+            </div>
             <form action="#" method="post" enctype="application/x-www-form-urlencoded">
                 <fieldset>
                     <legend>Dejanos tus datos nos contactaremos a la brevedad</legend>
@@ -69,8 +71,10 @@
                     </div>
                 </fieldset>
             </form>
-            <img class="imgform" src="../media/navidad.jpg" alt="navidad">
-            <img class="imgform" src="../media/tiramisu.jpg" alt="tiramisu">
+            <div class="flexImg">
+                <img class="imgform" src="../media/navidad.jpg" alt="navidad">
+                <img class="imgform" src="../media/tiramisu.jpg" alt="tiramisu">
+            </div>
         </section>
     </main>
     <footer>
